--- a/styles.css
+++ b/styles.css
@@ -47,3 +47,12 @@ img.click {
         border: 2px green solid;
     }
 }
+
+.MissingBannerModal {
+    & h3 {
+        margin-bottom: 5px;
+    }
+    & ul {
+        margin-top: 5px;
+    }
+}
