--- a/styles.css
+++ b/styles.css
@@ -103,4 +103,8 @@ If your plugin does not need CSS, delete this file.
 
 }
 
-
+.spotify-iframe {
+    width: 100%;
+    height: 352px;
+    border-radius: 12px;
+}
