--- a/styles.css
+++ b/styles.css
@@ -103,6 +103,25 @@ If your plugin does not need CSS, delete this file.
 
 }
 
+.SpotyImportModal {
+    & .input-container {
+        width: 100%;
+        display: flex;
+        gap: 5px;
+        justify-content: space-around;
+        margin-bottom: 10px;
+
+        & input {
+            flex: 10;
+        }
+        & span {
+            flex: 1;
+        }        
+    }
+
+}
+
+/* TODO: change for artist or album */
 .spotify-iframe {
     width: 100%;
     height: 352px;
