--- a/styles.css
+++ b/styles.css
@@ -116,14 +116,73 @@ If your plugin does not need CSS, delete this file.
         }
         & span {
             flex: 1;
-        }        
+        }
+    }
+
+    & hr {
+        margin-top: 16px;
+        margin-bottom: 8px;
+    }
+
+    & .input-div {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        margin-bottom: 10px;
+
+        & > h6 {
+            padding-left: var(--size-4-4);
+            padding-right: var(--size-4-4);
+            margin: 0;
+        }
+
+        & > input {
+            flex: 1;
+
+            &.error {
+                border-color: var(--color-red);
+            }
+        }
+    }
+
+    & .show-details-div {
+        padding-inline-start: var(--size-4-4);
+        background-color: var(--code-background);
+
+        & > span {
+            color: var(--code-normal);
+            font-family: var(--font-monospace);
+        }
+    }
+
+    & .confirm-note-creation-div {
+        width: 100%;
+        margin-top: 10px;
+        display: flex;
+        justify-content: center;
+
+        & > button {
+            
+        }
     }
 
 }
 
-/* TODO: change for artist or album */
 .spotify-iframe {
+    &.track {
+        width: 100%;
+        height: 352px;
+        border-radius: 12px;
+    }
+    &.album, 
+    &.artist {
+        width: 100%;
+        height: 600px;
+        border-radius: 12px;
+    }
+}
+
+.youtube-iframe {
     width: 100%;
-    height: 352px;
-    border-radius: 12px;
+    aspect-ratio: 16/9;
 }
