update: new ItchiIo and Steam Widget

--- a/styles.css
+++ b/styles.css
@@ -186,3 +186,25 @@ If your plugin does not need CSS, delete this file.
     width: 100%;
     aspect-ratio: 16/9;
 }
+
+.steam-iframe {
+    width: 646px;
+    height: 190px;
+}
+
+.itchio-iframe {
+    width: 646px;
+    height: 167px;
+}
+
+.steam-itchio-iframe-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5px;
+    
+    & > iframe {
+        flex: 1;
+        min-width: 500px;
+        max-width: 646px;
+    }
+}
